--- a/.github/workflows/java-ecr-workflow.yml
+++ b/.github/workflows/java-ecr-workflow.yml
@@ -1,5 +1,5 @@
-# 简洁的 Java ECR 构建 Workflow
-name: Build Java to Docker Image and Push to ECR
+# 通用 ECR 构建 Workflow
+name: Build Docker Image and Push to ECR
 
 on:
   workflow_call:
@@ -19,6 +19,11 @@ on:
         required: false
         default: 20
         type: number
+      dockerfile-path:
+        description: "Path to Dockerfile"
+        required: false
+        default: "Dockerfile"
+        type: string
     secrets:
       aws-access-key-id:
         description: "AWS Access Key ID"
@@ -99,7 +104,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: https://raw.githubusercontent.com/wujunlin555/workflows/main/.github/workflows/Dockerfile
+          file: ${{ inputs.dockerfile-path }}
           push: true
           platforms: linux/amd64
           tags: ${{ env.IMAGE_URI }}
