--- a/.github/workflows/universal-harbor-workflow.yml
+++ b/.github/workflows/universal-harbor-workflow.yml
@@ -17,7 +17,7 @@ on:
       dockerfile_path:
         description: "Path to Dockerfile"
         required: false
-        default: "Dockerfile"
+        default: ".github/workflows/Dockerfile"
         type: string
     secrets:
       harbor_username:
