--- a/.github/workflows/universal-ecr-workflow.yml
+++ b/.github/workflows/universal-ecr-workflow.yml
@@ -22,7 +22,7 @@ on:
       dockerfile-path:
         description: "Path to Dockerfile"
         required: false
-        default: "Dockerfile"
+        default: ".github/workflows/Dockerfile"
         type: string
     secrets:
       aws-access-key-id:
